# Automated_Lit_Revs

./: Automated_Lit_Revs_context_20240917_121917.txt  Automated_Lit_Revs_context_20240918_155837.txt  Dockerfile  README.md  Scopus_Demo.ipynb  all_python_contents.txt  analyze_papers.py  app.py  change_names.py  cookies.json  copy_all_code.py  core_search.py  create_databases.py  deploy.bat  docker-compose.debug.yml  docker-compose.yml  doi_to_clickable_hyperlink.py  download_and_transcribe.py  extract_db_to_xlsx.py  extract_zotero_metadata.py  filtered_scopus_abstracts.json  get_best_papers.py  get_paper_contents.py  get_references_for_parsing.py  get_repo_context.py  get_search_queries.py  get_search_results.py  get_transcribe.py  gunicorn.conf.py  lit_rev_all.ipynb  llm_api_handler.py  main.py  master.xlsx  misc_utils.py  models.py  openalex_results.json  openalex_results_0.json  openalex_search.py  outline.json  outline_1.db  (+24 more)
archive/: Dockerfile  app.py  poetry.bat  prompts.py
batch_output/: batch_batch_JDW4JlT7IOKzYJXxWfyQ9VIM_metadata.json  batch_batch_JDW4JlT7IOKzYJXxWfyQ9VIM_output.jsonl  batch_batch_dX8Sy9i2cTQkkIFCknyX1ssI_metadata.json  batch_input.jsonl
classified_content/: categories.yaml  citations.bib  classified_content.sqlite  database.db
deployment_scripts/: deploy.bat  run_app.bat
documents/: master - Copy.xlsx  master.xlsx  master_processed.xlsx  outline_4.json  outline_5.json  outline_6.json
manual_prompts/: Scopus_Search_Guide.txt  add_broader_search queries.txt  analyze_draft_and_reduce_redundancy.txt  get_initial_yaml_outline.txt  (+5 more)
(+766 files in other folders)
