   [tool.poetry]
   name = "automated-lit-revs"
   version = "0.1.0"
   description = "Automated Search and Curation for Systematic Literature Reviews"
   authors = ["Your Name <your.email@example.com>"]

   [tool.poetry.dependencies]
   python = "^3.9"
   aiohttp = "*"
   asyncio = "*"
   anthropic = "*"
   openai = "*"
   backoff = "*"
   fastapi = "*"
   google-cloud-secret-manager = "*"
   huey = "*"
   pydantic = "*"
   pytz = "*"
   requests = "*"
   sib_api_v3_sdk = "*"
   tiktoken = "*"
   python-multipart = "*"
   python-dotenv = "*"
   gunicorn = "*"
   uvicorn = "^0.20.0"

   [build-system]
   requires = ["poetry-core>=1.0.0"]
   build-backend = "poetry.core.masonry.api"